USe tailwind and a landing page template

--- a/web/src/styles/custom-properties.css
+++ b/web/src/styles/custom-properties.css
@@ -5,7 +5,7 @@
   --color-dark-gray: #32373e;
   --color-gray: #697a90;
   --color-light-gray: #b4bcc7;
-  --color-very-light-gray: #e7ebed;
+  --color-very-light-gray: rgb(242, 244, 245);
   --color-white: #fff;
   --color-accent: #156dff;
 
