--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -1,7 +1,8 @@
-@import '../styles/custom-media.css';
-@import '../styles/custom-properties.css';
+@import "../styles/custom-media.css";
+@import "../styles/custom-properties.css";
 
 .root {
+  background-color: white;
   position: relative;
   z-index: 100;
 }
