--- a/web/src/styles/blog.module.css
+++ b/web/src/styles/blog.module.css
@@ -1,5 +1,5 @@
 .header {
-  background-image: url(./cover.jpg);
+  background-image: url(../images/cover.jpg);
   height: 60vh;
   max-height: 460px;
 }
