--- a/web/src/components/blog-post.module.css
+++ b/web/src/components/blog-post.module.css
@@ -1,10 +1,8 @@
-@import '../styles/custom-media.css';
-@import '../styles/custom-properties.css';
-
-.root {}
+@import "../styles/custom-media.css";
+@import "../styles/custom-properties.css";
 
 .title {
-  composes: responsiveTitle1 from './typography.module.css';
+  composes: responsiveTitle1 from "./typography.module.css";
 }
 
 .mainImage {
@@ -45,8 +43,30 @@
     }
   }
 
-  @nest & h2, & h3, & h4, & h5, & h6 {
+  @nest & h1 {
+    font-size: 2em;
+    font-weight: 900;
+  }
+  @nest & h2 {
+    font-size: 1.5em;
+    font-weight: 800;
+  }
+  @nest & h3 {
+    font-size: 1.25em;
     font-weight: 600;
+  }
+
+  @nest & h4 {
+    font-size: 1em;
+    font-weight: bold;
+  }
+
+  @nest & h2, & h3, & h4, & h5, & h6 {
+    margin: 0.75em 0 0.5em 0;
+  }
+
+  @nest & p {
+    padding-top: 0.5em;
   }
 
   @nest & figure {
@@ -57,13 +77,23 @@
       max-width: 100%;
     }
   }
+
+  @nest & ol {
+    margin-left: 1.5em;
+    list-style: decimal;
+  }
+
+  @nest & ul {
+    margin-left: 1.5em;
+    list-style: circle;
+  }
 }
 
 .metaContent {
 }
 
 .publishedAt {
-  composes: small from './typography.module.css';
+  composes: small from "./typography.module.css";
   margin: 2rem 0 3rem;
   color: var(--color-gray);
 }
@@ -84,6 +114,6 @@
 }
 
 .categoriesHeadline {
-  composes: base from './typography.module.css';
+  composes: base from "./typography.module.css";
   margin: 0.5rem 0 0;
 }
